--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -40,6 +40,7 @@
   overflow: auto;
   .content {
     // height: 100%;
+    width: 100%;
     min-height: calc(100% - 70px);
     padding: 10px;
     background: #fff;
